TAG: qcreports_db-6-0-16-23
TAG: qcreports_db-6-0-16-22
DATE: 04/14/2021, 04/21/2021
STAFF: lec
add go_cam.csh to qcnightly_reports.csh
${DBUTILS}/mgidbmigration/tr13272/go_cam.csh

TAG: qcreports_db-6-0-16-21
TAG: qcreports_db-6-0-16-20
DATE: 04/14/2021
STAFF: sc
WTS2-497 new report weekly/VOC_DODups.sql 

TAG: qcreports_db-6-0-16-19
DATE: 04/13/2021
STAFF: dbm
TR13481/New GO Text Load

TAG: qcreports_db-6-0-16-18
DATE: 04/08/2021
STAFF: lec
TR13307/Adding PMIDS from Noctua load into MGI

TAG: qcreports_db-6-0-16-17
DATE: 03/30/2021
STAFF: sc
TR13485/Fix bug in mgd/VOC_InvalidInferred.py - see TR

TAG: qcreports_db-6-0-16-16
DATE: 03/12/2021
STAFF: dbm
TR13379/Modifications to GO Stats

TAG: qcreports_db-6-0-16-15
DATE: 03/02/2021
STAFF: lec
TR13469/proisoformload/GAF2.2 changes

TAG: qcreports_db-6-0-16-14
DATE: 01/28/2021
STAFF: sc
TR13433 - New GO report: pm2gene Refs not in MGI
mgd/GO_PM2GeneRefsNotInMGI.py

TAG: qcreports_db-6-0-16-13
DATE: 01/26/2026
STAFF: dbm
1) MRK_GOUnknown.py: Exclude references tagged with GO:QC1_GOunknown_exclude
2) MRK_NoGO.py: Exclude references tagged with GO:QC4_NoGO_exclude
3) MRK_GOIEA.py: Exclude references tagged with GO:QC5_IEA-only_exclude

TAG: qcreports_db-6-0-16-12
DATE: 10/23/2020
STAFF: dbm
python3 fix: mgd/GO_InvalidInferredFrom.py, mgd/MRK_GOIEA.py

TAG: qcreports_db-6-0-16-11
DATE: 10/14/2020
STAFF: sc
but fix: mgd/GXD_ImagePanes.py

TAG: qcreports_db-6-0-16-10
DATE: 09/23/2020
STAFF: lec
TR13327/AP group weekly reference QC reports/WF_AP_Tags.py

TAG: qcreports_db-6-0-16-9
DATE: 09/09/2020
STAFF: sc
TR13374 - New MRK_C4AM.rpt

TAG: qcreports_db-6-0-16-8
DATE: 09/04/2020
STAFF: lec
TR13327/AP group weekly reference QC reports/WF_AP_Tags.py

TAG: qcreports_db-6-0-16-7
DATE: 09/04/2020
STAFF: lec
TR13277/change short citation to longer citation on journal QC reports
TR13356/re-label and re-sort GO QC reports
TR13357/removal of GO QC report  (mgd/MGI_GenotypeDescriptions.py)

TAG: qcreports_db-6-0-16-6
DATE: 09/04/2020