@@ -1,6 +1,0 @@
-#!/usr/local/bin/python
-
-# This is a stub file which is a place holder for potential future qc reports. 
-# Currently there are no reports defined from this product for the egload. 
-# If one is added initially, then this dummy file can be removed.
-# To add a qc report just place a program in this directory with the suffix 'py'
